# parameter_test

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  example_component.cc  example_component.h
src/neolix/calibration/: calibration_common.proto  calibration_error_code.proto  calibration_grpc_api.proto
src/neolix/calibrator/: build.sh  calibrator_message.proto  calibrator_service.proto
src/neolix/canbus/: can_card_parameter.proto  canbus_conf.proto  canbus_frame.proto
src/neolix/closeloop/: closeloop_hdmap.proto  closeloop_metric.proto  closeloop_params.proto  closeloop_service.proto
src/neolix/collector/: collector_disengage.proto  collector_info.proto  collector_routing.proto  data_status_message.proto  data_worker_common.proto  data_worker_disk.proto  data_worker_query.proto  data_worker_service.proto  data_worker_task.proto  data_worker_trigger.proto  disk_info_message.proto  statecollector_service.proto  taskid_service.proto
src/neolix/common/: common_geometry.proto  driver_velodyne_des.proto  perception_pnc_communicate.proto  sensors_status.proto
src/neolix/config/: config.proto  config_extrinsics.proto  scene_special_config.proto
src/neolix/control/: control_cmd.proto  pad_msg.proto
src/neolix/coral/: coral_router.proto  perception_open_params.proto  pnc_open_params.proto
src/neolix/cybertron/: accurate_vehicle_config.proto  camera_config.proto  chatter.proto  cyber_header.proto  gnss_config.proto  lms_confidence_grid.proto  lms_config.proto  ls_lidar_config.proto  meta_message.proto  radar_config.proto  ultrasonic_config.proto  velodyne_config.proto  whisper.proto
src/neolix/data_recorder/: recorder_cmd.proto
src/neolix/decision/: decision.proto  decision_service.proto
src/neolix/global/: global_adc_status.proto
src/neolix/header/: header.proto
src/neolix/hmi/: hmi_car_device.proto  hmi_collect_car_device.proto  hmi_collect_data.proto  hmi_collect_disk_info.proto  hmi_common.proto  hmi_driving_control.proto  hmi_error_code.proto  hmi_fetch_msg.proto  hmi_grpc_api.proto  hmi_hudinfo.proto  hmi_launch.proto  hmi_localization_init.proto  hmi_map_info.proto  hmi_obstacle.proto  hmi_ota.proto  hmi_planning.proto  hmi_routing.proto  hmi_state.proto  hmi_system_control.proto  hmi_ultrasonic.proto  hmi_world.proto  launcher.proto  launcher_grpc_api.proto
src/neolix/hmi-state/: state.proto  state_grpc_api.proto
src/neolix/hmi-workers/: openapi_client_fm_grpc.proto  openapi_common_msg.proto  openapi_common_service.proto  openapi_monitor.proto  openapi_onboard.proto  openapi_server_mobile_grpc.proto
src/neolix/inspector/: inspector_error_code.proto  inspector_msg.proto  inspector_service.proto
src/neolix/localization/: localization_gnss_pnt_result.proto  localization_gnss_raw_observation.proto  localization_init_service.proto  localization_integ_measure.proto  localization_integ_sins_pva.proto  localization_lidar_analysis_data.proto  localization_pose.proto  localization_raw_imu.proto  localization_service_reload.proto  localization_service_set_local_mode.proto  localization_status.proto
src/neolix/map/: map.proto  map_clear_area.proto  map_compile.proto  map_crosswalk.proto  map_geometry.proto  map_id.proto  map_interface.proto  map_interface_ex.proto  map_junction.proto  map_lane.proto  map_overlap.proto  map_parking_space.proto  map_road.proto  map_signal.proto  map_speed_bump.proto  map_stop_sign.proto  map_xml.proto  map_yield_sign.proto  result.proto
src/neolix/map3d/: map3d.proto
src/neolix/monitor/: file_exist.proto  memory_status.proto  monitor_result.proto  monitor_status.proto  node_exception.proto  node_status.proto  recorder_info.proto  time_difference.proto
src/neolix/ota/: ota.proto
src/neolix/patrol/: patrol_heartbeat.proto  patrol_result.proto
src/neolix/perception/: lidar_content.proto  perception_camera.proto  perception_map_roi.proto  perception_obstacle.proto  perception_sensor_object.proto  perception_ultrasonic.proto
src/neolix/planning/: planning.proto  planning_internal.proto
src/neolix/prediction/: prediction_obstacle.proto
src/neolix/router/: router.proto  router_service.proto
src/neolix/routing/: routing.proto  topo_graph.proto  (+1 more)
src/proto/: examples.proto  topology_change.proto
(+52 files in other folders)
